تعديل تصميم الصفحة

--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar" dir="rtl">
 <head>
-  <title>Module 4 Assignment</title>
+  <meta charset="UTF-8">
+  <title>موقع ميساء - Module 4</title>
+  <style>
+    body {
+      background: linear-gradient(to bottom right, #f7e9ff, #cdb4db);
+      font-family: 'Tahoma', sans-serif;
+      text-align: center;
+      padding: 50px;
+      color: #4a148c;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 22px;
+      color: #6a1b9a;
+    }
+
+    .box {
+      background-color: white;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
-  <h1>مرحبا! هذا هو موقعي لمهمة Module 4</h1>
+  <div class="box">
+    <h1>مرحباً بكم في موقعي!</h1>
+    <p>أنا ميساء، وهذا مشروعي لمهمة Module 4 ✨</p>
+  </div>
 </body>
 </html>
